[package]
name = "images-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "images"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
rayon = "1.10"
image = { version = "0.25", features = [
    "avif-native",
    "rayon",
    "nasm",
    "webp",
    "jpeg",
    "png",
    "gif",
    "tiff",
    "bmp",
] }
numpy = "0.22"
